purchasedbook controller test